--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aciton|System|Consulting|Software</title>
+    <title>Aciton System|Technologies|System|Consulting|Software</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="icon" href="favicon.png">
@@ -217,7 +217,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/solu-rrhh.jpg" alt="01" class="img-responsive"></a>
+                                <a href="soluciones/erp.html"><img src="img/sol-rrhh.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-primary text-white" style="padding: 5px;">
                                     <h4>Soluciones de Recursos Humanos</h4>
                                 </div>
