--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/solu-gestion.jpg" alt="01" class="img-responsive"></a>
+                                <a href="soluciones/erp.html"><img src="img/sol-erp.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-dark text-white" style="padding: 5px;">
                                     <h4>Soluciones de Gestión Empresarial</h4>
                                 </div>
@@ -229,7 +229,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/pt.png" alt="01" class="img-responsive"></a>
+                                <a href="soluciones/erp.html"><img src="img/sol-pventa.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-warning text-white" style="padding: 5px;">
                                     <h4>Soluciones de Puntos de Venta</h4>
                                 </div>
