--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="header">
             <div class="bg-color">
                 <!-- <script type="text/javascript" language="javascript">encabezadopagina();</script> -->
-                <header id="main-header">
 
+                <header id="main-header">
                     <div class="header-top">
                         <div class="container" style="padding:0;">
                             <div class="col-md-6">
@@ -111,7 +111,7 @@
                                         </a>
                                         <ul class="dropdown-menu dropdownhover-bottom" role="menu">
                                             <li>
-                                                <a href="soluciones/erp.html">SOLUCIONES DE GESTIÓN EMPRESARIAL</a>
+                                                <a href="erp.html">SOLUCIONES DE GESTIÓN EMPRESARIAL</a>
                                             </li>
                                             <li>
                                                 <a href="#">SOLUCIONES DE RECURSOS HUMANOS</a>
@@ -137,7 +137,7 @@
                                                 <a href="#service">DESARROLLO DE SOFTWARE</a>
                                             </li>
                                             <li>
-                                                <a href="#service">DESARROLLO DE APLICACIONES MÓVILES</a>
+                                                <a href="app-development.html">DESARROLLO DE APLICACIONES MÓVILES</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -211,7 +211,7 @@
                                 </div>
                             </div>
                             <p>Conjunto de sistemas de información que permite de una manera óptima y sencilla la administración de las operaciones de una empresa.</p>
-                            <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                            <a href="erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-xs-12">
@@ -242,12 +242,12 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/solu-tiempo.jpg" alt="01" class="img-responsive"></a>
+                                <a href="soluciones/erp.html"><img src="img/sol-billar.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-success text-white" style="padding: 5px; border-spacing: 0;">
-                                    <h4>Soluciones de Monitoreo de tiempos</h4>
+                                    <h4>Software para Salones de Billar</h4>
                                 </div>
                             </div>
-                            <p>Es un sistema que permite controlar tiempos de alquiler, consumos y stock de productos. Herramient ideal para administrar salones de Billar.</p>
+                            <p>Herramienta ideal para controlar tiempos de alquiler (mesas, fulbito de mano, mesas de consumo, sapo y etc.), venta y stock de productos.</p>
                             <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                             <div class="media-body">
                                 <h4 class="media-heading bordered">Software Factory</h4>
                                 <p class="text-justify" style="min-height: 100px;">Contamos con amplia experiencia brindando el servicio de Desarrollo de Software (Escritorio y Web) en diferentes plataformas y tecnologías (.Net, Php y Java).</p>
-                                <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                                <a href="software-development.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                                 <h4 class="media-heading bordered">Aplicaciones Móviles</h4>
                                 <p class="text-justify"  style="min-height: 100px;">Contamos especialistas en crear Aplicaciones Móviles para diferentes plataformas, Android y iOS. Aplicaciones eficientes para satisfacer las expectativas de nuestros clientes.</p>
 
-                                <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                                <a href="software-development.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                             </div>
                         </div>
                     </div>
