--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
                                                 <a href="erp.html">SOLUCIONES DE GESTIÓN EMPRESARIAL</a>
                                             </li>
                                             <li>
-                                                <a href="#">SOLUCIONES DE RECURSOS HUMANOS</a>
+                                                <a href="javascript:void(0)">SOLUCIONES DE RECURSOS HUMANOS</a>
                                             </li>
                                             <li role="separator" class="divider"></li>
                                             <li>
-                                                <a href="#">SOLUCIONES DE PUNTO DE VENTA</a>
+                                                <a href="javascript:void(0)">SOLUCIONES DE PUNTO DE VENTA</a>
                                             </li>
                                             <li role="separator" class="divider"></li>
                                             <li>
-                                                <a href="#">SOLUCIONES DE MONITOREO DE TIEMPOS</a>
+                                                <a href="javascript:void(0)">SOFTWARE PARASALONES DE BILLAR</a>
                                             </li>
                                             <!-- <li class="dropdown"> <a href="#">Another dropdown <span class="caret"></span></a> <ul class="dropdown-menu"> <li><a href="#">Action</a></li> <li><a href="#">Another action</a></li> </ul> </li> -->
                                         </ul>
@@ -134,7 +134,7 @@
                                         </a>
                                         <ul class="dropdown-menu dropdownhover-bottom" role="menu">
                                             <li>
-                                                <a href="#service">DESARROLLO DE SOFTWARE</a>
+                                                <a href="software-development.html">DESARROLLO DE SOFTWARE</a>
                                             </li>
                                             <li>
                                                 <a href="app-development.html">DESARROLLO DE APLICACIONES MÓVILES</a>
@@ -205,7 +205,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/sol-erp.png" alt="01" class="img-responsive"></a>
+                                <a href="erp.html"><img src="img/sol-erp.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-dark text-white" style="padding: 5px;">
                                     <h4>Soluciones de Gestión Empresarial</h4>
                                 </div>
@@ -217,38 +217,38 @@
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/sol-rrhh.png" alt="01" class="img-responsive"></a>
+                                <a href="javascript:void(0)"><img src="img/sol-rrhh.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-primary text-white" style="padding: 5px;">
                                     <h4>Soluciones de Recursos Humanos</h4>
                                 </div>
                             </div>
                             <p>Herramienta muy eficiente y fácil de usar que permite gestionar planillas de personal en organizaciones de cualquier tamaño y rubro.</p>
-                            <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                            <a href="javascript:void(0)" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/sol-pventa.png" alt="01" class="img-responsive"></a>
+                                <a href="javascript:void(0)"><img src="img/sol-pventa.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-warning text-white" style="padding: 5px;">
                                     <h4>Soluciones de Puntos de Venta</h4>
                                 </div>
                             </div>
                             <p>Ofrece un control de ventas, emisión boletas y tickets. Ideal para supermercados, ferreterias, minimarket, bodegas, farmacias, y otros tipos de negocio.</p>
                             <!-- <a href="" class="da-link">Más información →</a> -->
-                            <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                            <a href="javascript:void(0)" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="wrap-item text-center transition-obj">
                             <div class="item-img">
-                                <a href="soluciones/erp.html"><img src="img/sol-billar.png" alt="01" class="img-responsive"></a>
+                                <a href="javascript:void(0)"><img src="img/sol-billar.png" alt="01" class="img-responsive"></a>
                                 <div class="bg-success text-white" style="padding: 5px; border-spacing: 0;">
                                     <h4>Software para Salones de Billar</h4>
                                 </div>
                             </div>
                             <p>Herramienta ideal para controlar tiempos de alquiler (mesas, fulbito de mano, mesas de consumo, sapo y etc.), venta y stock de productos.</p>
-                            <a href="soluciones/erp.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                            <a href="javascript:void(0)" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                     <div class="col-md-6">
                         <div class="media">
                             <div class="media-left media-middle">
-                                <a href="#">
+                                <a href="software-development.html">
                                     <img class="media-object" src="img/Serv-Fact.png" style="max-width: 80px; max-height: 80px;" alt="2">
                                 </a>
                             </div>
@@ -285,7 +285,7 @@
                     <div class="col-md-6">
                         <div class="media">
                             <div class="media-left media-middle">
-                                <a href="#">
+                                <a href="app-development.html">
                                     <img class="media-object" src="img/serv-app.png" style="max-width: 80px; max-height: 80px;" alt="2">
                                 </a>
                             </div>
@@ -293,7 +293,7 @@
                                 <h4 class="media-heading bordered">Aplicaciones Móviles</h4>
                                 <p class="text-justify"  style="min-height: 100px;">Contamos especialistas en crear Aplicaciones Móviles para diferentes plataformas, Android y iOS. Aplicaciones eficientes para satisfacer las expectativas de nuestros clientes.</p>
 
-                                <a href="software-development.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
+                                <a href="app-development.html" class="btn btn-primary" style="width: 100%;">MÁS INFORMACIÓN</a>
                             </div>
                         </div>
                     </div>
