--- a/app-development.html
+++ b/app-development.html
@@ -50,10 +50,57 @@
                         <p class="sub-title pad-bt15">
                             Las apps móviles son uno de los principales medios masivos de comunicación, entretenimiento, consumo masivo, organizacion, entre otros. Por eso en Vex Soluciones nos enfocamos en crear aplicaciones de alta calidad, simples, robustas y con alto rendimiento para nuestros clientes. te acompañamos desde la concepcion de la idea hasta el desarrollo y el soporte continuo.
                         </p>
+                        <hr class="bottom-line">
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="section-padding-detail wow fadeIn delay-05s animated">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <div class="media-left media-middle">
+                                <a href="software-development.html">
+                                    <img class="media-object" src="img/serv-app-movil.png" alt="2">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading bordered">Desarrollo de Aplicaciones Móviles</h2>
+                                <p class="text-justify" style="min-height: 100px;">Contamos con amplia experiencia brindando el servicio de Desarrollo de Software (Escritorio y Web) en diferentes plataformas y tecnologías (.Net, Php y Java).</p>
+                                <a href="software-development.html" class="btn btn-primary">MÁS INFORMACIÓN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="service section-padding-detail wow fadeIn delay-05s animated">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <div class="media-body">
+                                <h2 class="media-heading bordered">¿Por qué App Móvil?</h2>
+                                <p class="text-justify">
+                                    El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.
+                                </p>
+                                <a href="software-development.html" class="btn btn-primary">MÁS INFORMACIÓN</a>
+                            </div>
+                            <div class="media-right media-middle">
+                                <a href="software-development.html">
+                                    <img class="media-object" src="img/serv-app-movil02.png" alt="2">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
         <section class="service section-padding-detail wow fadeIn delay-05s animated">
             <div class="container">
