--- a/erp.html
+++ b/erp.html
@@ -98,7 +98,8 @@
                                 <img class="media-object" src="img/mod-log.png" alt="ModLog">
                             </a>
                             <h4 class="media-heading bordered">Logística e inventarios</h4>
-                            <p class="text-justify">Controle sus compras, inventarios y las importaciones, administre sus almacenes, los stock de los artículos son actualizados de manera rápida y en línea cuando realiza sea una compra local o una importación, cuando realiza salidas como ventas, donaciones, etc.  Genere informes respectivos para su control. El módulo permite emitir requerimientos de compra de los departamentos de su organización, emita y haga seguimientos de sus órdenes de compra. Controla movimientos y saldos de sus almacenes, tanto en cantidades como en valores. Registre movimientos en sus diferentes almacenes simultáneamente, ya que en una sola transacción se pueden generar movimientos de ingresos y salidas de diversos almacenes, genere transferencias automáticas entre almacenes, así como el control de movimientos por lotes producción.</p>
+                            <p class="text-justify">Controle sus compras, inventarios y las importaciones, administre sus almacenes, los stock de los artículos son actualizados de manera rápida y en línea cuando realiza sea una compra local o una importación, cuando realiza salidas como ventas, donaciones, etc.  Genere informes respectivos para su control. El módulo permite emitir requerimientos de compra de los departamentos de su organización, emita y haga seguimientos de sus órdenes de compra. Controla movimientos y saldos de sus almacenes, tanto en cantidades como en valores. Registre movimientos en sus diferentes almacenes simultáneamente, ya que en una sola transacción se pueden generar movimientos de ingresos y salidas de diversos almacenes, genere transferencias automáticas entre almacenes, así como el control de movimientos por lotes producción.
+                            </p>
                         </div>
                     </div>
 
@@ -108,7 +109,8 @@
                                 <img class="media-object" src="img/mod-finan.png" alt="Módulo Contabilidad">
                             </a>
                             <h4 class="media-heading bordered">Finanzas & contabilidad</h4>
-                            <p class="text-justify">Registre sus transacciones comerciales, conozca la marcha de la organización en cualquier momento, de manera confiable en cualquier nivel de detalle. Es un módulo BI-monetaria, asimismo, permite la identificación de los gastos por centros de costos, distribución de gatos, estados financieros, retenciones, detracciones, libros contables, estado de ganancias y pérdidas, calcula diferencia de cambio, cierre del Ejercicio automáticamente. Emite los Libros oficiales según SUNAT, emite los libros Electrónicos, El DAOT, entre otros.</p>
+                            <p class="text-justify">Registre sus transacciones comerciales, conozca la marcha de la organización en cualquier momento, de manera confiable en cualquier nivel de detalle. Es un módulo BI-monetaria, asimismo, permite la identificación de los gastos por centros de costos, distribución de gatos, estados financieros, retenciones, detracciones, libros contables, estado de ganancias y pérdidas, calcula diferencia de cambio, cierre del Ejercicio automáticamente. Emite los Libros oficiales según SUNAT, emite los libros Electrónicos, El DAOT, entre otros.
+                            </p>
                         </div>
                     </div>
                 </div>
