--- a/software-development.html
+++ b/software-development.html
@@ -53,84 +53,88 @@
                </div>
             </div>
          </section>
-         <section class="service section-padding-detail wow fadeIn delay-05s">
+         <section class="section-padding-detail wow fadeIn delay-05s zoomInLeft">
             <div class="container">
-               <div class="col-md-12 text-center">
-                  <!-- <h2 class="service-title pad-bt15">Beneficios</h2> -->
-                  <h2 class="light pad-bt15"><span>Beneficios</span></h2>
-                  <p class="sub-title pad-bt15">
-                     Principales beneficios que brinda el desarrollo de software a medida y aplicaciones móviles
-                  </p>
-                  <hr class="bottom-line">
-               </div>
-               <div class="row">
-                  <div class="col-md-6">
-                     <div class="container-beneficios">
-                        <a class="navbar-brand" href="#contact">
-                        <img class="media-object bg-transparent" src="img/mod-venta.png" alt="ModFact">
-                        </a>
-                        <h4 class="media-heading bordered">Desarrollo de Software a Medida</h4>
-                        <p class="text-justify">
-                           El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Con un software a medida implementado en su negocio, usted podrá reducir costos y aumentar sus ingresos.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Su empresa se orientará completamente a su negocio y no tendrá responsabilidades de software como carga de trabajo.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Aumento de ciberseguridad
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Servicio de mantenimiento y soporte una vez terminado el proyecto, acompañando al cliente en cualquier correción o consulta.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Trasladar el riesgo a empresas que se dedican o son especialistas a tecnologia
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Obtener un producto de software de alta calidad gracias a nuestra amplia experiencia y metodología utilizada..
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Se ha diseñado específicamente para las necesidades empresariales específicas. Se puede adaptar a través de la programación de software personalizado para adaptarse a las necesidades operativas de una organización.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Es más fácil e intuitivo de usar y no contiene instalaciones innecesarias.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Agregar valor a una empresa, sugiriendo alternativas útiles y actuando como una útil fuente de asesoramiento e información.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Flexibilidad en comparación con los paquetes de software. Software personalizado se puede cambiar y modificarse con el tiempo según los cambios en los requerimientos del negocio.
-                        </p>
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="container-beneficios">
-                        <a class="navbar-brand" href="#contact">
-                        <img class="media-object bg-transparent" src="img/mod-venta.png" alt="ModFact">
-                        </a>
-                        <h4 class="media-heading bordered"> Tener una App Móvil</h4>
-                        <p class="text-justify">
-                           Las empresas maximizan de manera natural la eficiencia de sus recursos y procesos para sacarles el máximo provecho. En concordancia con la creciente tendencia del uso de smartphones, desarrollar apps móviles para empresas y organizaciones se convierte en una estrategia que puede aportar numerosas ventajas.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Fortalecer la marca tener presencia en los dispositivos móviles posiciona mucho mejor la marca.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Fidelización de clientes ofreciendo un servicio exclusivo a través de su app hará que su cliente se identifique aún más con su marca.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Retención de clientes aprovechar la app para mejorar la experiencia del cliente con su marca hará de la retención un proceso más fácil.
-                        </p>
-                        <p class="text-justify">
-                           <span class="glyphicon glyphicon-ok"></span> Conseguir nuevos clientes una app móvil le ayudara a posicionar su marca y conseguir nuevos clientes desde las tiendas de aplicaciones
-                        </p>
-                     </div>
-                  </div>
-               </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <div class="media-left media-middle" style="width: 50%; float: left;">
+                                <img class="media-object img-responsive" src="img/serv-app-movil.png" alt="2">
+                            </div>
+                            <div class="media-body" style="width: 50%; float: left;">
+                                <h2 class="media-heading bordered">Desarrollo de Software a Medida</h2>
+                                <p class="text-justify" style="min-height: 100px;">El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.</p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Con un software a medida implementado en su negocio, usted podrá reducir costos y aumentar sus ingresos.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Su empresa se orientará completamente a su negocio y no tendrá responsabilidades de software como carga de trabajo.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Aumento de ciberseguridad
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Servicio de mantenimiento y soporte una vez terminado el proyecto, acompañando al cliente en cualquier correción o consulta.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Trasladar el riesgo a empresas que se dedican o son especialistas a tecnologia
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Obtener un producto de software de alta calidad gracias a nuestra amplia experiencia y metodología utilizada..
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Se ha diseñado específicamente para las necesidades empresariales específicas. Se puede adaptar a través de la programación de software personalizado para adaptarse a las necesidades operativas de una organización.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Es más fácil e intuitivo de usar y no contiene instalaciones innecesarias.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Agregar valor a una empresa, sugiriendo alternativas útiles y actuando como una útil fuente de asesoramiento e información.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Flexibilidad en comparación con los paquetes de software. Software personalizado se puede cambiar y modificarse con el tiempo según los cambios en los requerimientos del negocio.
+                                </p>
+                                <a href="#contact" class="btn btn-primary">MÁS INFORMACIÓN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </section>
+        </section>
+
+        <section class="service section-padding-detail wow fadeIn delay-05s zoomInLeft">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <div class="media-body" style="width: 50%; float: left;">
+                                <h2 class="media-heading bordered">Tener una App Móvil</h2>
+                                <p class="text-justify">
+                                   Las empresas maximizan de manera natural la eficiencia de sus recursos y procesos para sacarles el máximo provecho. En concordancia con la creciente tendencia del uso de smartphones, desarrollar apps móviles para empresas y organizaciones se convierte en una estrategia que puede aportar numerosas ventajas.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Fortalecer la marca tener presencia en los dispositivos móviles posiciona mucho mejor la marca.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Fidelización de clientes ofreciendo un servicio exclusivo a través de su app hará que su cliente se identifique aún más con su marca.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Retención de clientes aprovechar la app para mejorar la experiencia del cliente con su marca hará de la retención un proceso más fácil.
+                                </p>
+                                <p class="text-justify">
+                                   <span class="glyphicon glyphicon-ok"></span> Conseguir nuevos clientes una app móvil le ayudara a posicionar su marca y conseguir nuevos clientes desde las tiendas de aplicaciones
+                                </p>
+                                <a href="#contact" class="btn btn-primary">MÁS INFORMACIÓN</a>
+                            </div>
+                            <div class="media-right media-middle" style="width: 50%; float: left;">
+                                <img class="media-object img-responsive" src="img/serv-app-movil02.png" alt="2" >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
          <script type="text/javascript"> seccionnosotros();</script>
          <script type="text/javascript"> seccionclientes();</script>
          <script type="text/javascript"> seccioncontacto();</script>
