--- a/app-development.html
+++ b/app-development.html
@@ -56,43 +56,24 @@
             </div>
         </section>
 
-        <section class="section-padding-detail wow fadeIn delay-05s animated">
+        <section class="section-padding-detail wow fadeIn delay-05s zoomInLeft">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="media">
-                            <div class="media-left media-middle">
-                                <a href="software-development.html">
-                                    <img class="media-object" src="img/serv-app-movil.png" alt="2">
-                                </a>
+                            <div class="media-left media-middle" style="width: 50%; float: left;">
+                                <img class="media-object img-responsive" src="img/serv-app-movil.png" alt="2">
                             </div>
-                            <div class="media-body">
-                                <h2 class="media-heading bordered">Desarrollo de Aplicaciones Móviles</h2>
-                                <p class="text-justify" style="min-height: 100px;">Contamos con amplia experiencia brindando el servicio de Desarrollo de Software (Escritorio y Web) en diferentes plataformas y tecnologías (.Net, Php y Java).</p>
-                                <a href="software-development.html" class="btn btn-primary">MÁS INFORMACIÓN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="service section-padding-detail wow fadeIn delay-05s animated">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="media">
-                            <div class="media-body">
+                            <div class="media-body" style="width: 50%; float: left;">
                                 <h2 class="media-heading bordered">¿Por qué App Móvil?</h2>
+                                <p class="text-justify" style="min-height: 100px;"> El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.</p>
                                 <p class="text-justify">
-                                    El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.
+                                    <span class="glyphicon glyphicon-ok"></span> Un usuario con su aplicación aumenta un 61% las probabilidades de compra de sus productos.
                                 </p>
-                                <a href="software-development.html" class="btn btn-primary">MÁS INFORMACIÓN</a>
-                            </div>
-                            <div class="media-right media-middle">
-                                <a href="software-development.html">
-                                    <img class="media-object" src="img/serv-app-movil02.png" alt="2">
-                                </a>
+                                <p class="text-justify">
+                                    <span class="glyphicon glyphicon-ok"></span> El 75% de los usuarios afirman que el desarrollo e integración de una app en las empresas genera mas confianza en la marca.
+                                </p>
+                                <a href="#contact" class="btn btn-primary">MÁS INFORMACIÓN</a>
                             </div>
                         </div>
                     </div>
@@ -100,60 +81,42 @@
             </div>
         </section>
 
-
-
-        <section class="service section-padding-detail wow fadeIn delay-05s animated">
+        <section class="service section-padding-detail wow fadeIn delay-05s zoomInLeft">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h2 class="light pad-bt15"><span>¿Por qué App Móvil?</span></h2>
-                        <p class="sub-title pad-bt15">
-                            El tráfico generado en Internet por dispositivos móviles supera al tráfico generado por PCs, tener una aplicación app móvil te conectará con una audiencia de mas de 700 000 000 de usuarios que ya cuentan con dispositivos móviles.   El desarrollo de aplicaciones, apps móviles y su descarga son una de las tendencias que dominan el actual mercado digital y el mundo empresarial. Esto representa para las pequeñas y medianas empresas no solo una gran oportunidad de llegar a un mayor numero de clientes potenciales ofreciendoles algo útil y de calidad si no también una necesidad para ser más competitivas.
-                        </p>
-                        <hr class="bottom-line">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <div class="media-body" style="width: 50%; float: left;">
+                                <h2 class="media-heading bordered">Beneficios</h2>
+                                <p class="text-justify">
+                                    Las empresas maximizan de manera natural la eficiencia de sus recursos y procesos para sacarles el máximo provecho. En concordancia con la creciente tendencia del uso de smartphones, desarrollar apps móviles para empresas y organizaciones se convierte en una estrategia que puede aportar numerosas ventajas.
+                                </p>
+                                <p class="text-justify">
+                                    <span class="glyphicon glyphicon-ok"></span> Fortalecer la marca tener presencia en los dispositivos móviles posiciona mucho mejor la marca.
+                                </p>
+                                <p class="text-justify">
+                                    <span class="glyphicon glyphicon-ok"></span> Fidelización de clientes ofreciendo un servicio exclusivo a través de su app hará que su cliente se identifique aún más con su marca.
+                                </p>
+                                <p class="text-justify">
+                                    <span class="glyphicon glyphicon-ok"></span> Retención de clientes aprovechar la app para mejorar la experiencia del cliente con su marca hará de la retención un proceso más fácil.
+                                </p>
 
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> Un usuario con su aplicación aumenta un 61% las probabilidades de compra de sus productos.
-                        </p>
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> El 75% de los usuarios afirman que el desarrollo e integración de una app en las empresas genera mas confianza en la marca.
-                        </p>
+                                <p class="text-justify">
+                                    <span class="glyphicon glyphicon-ok"></span> Conseguir nuevos clientes una app móvil le ayudara a posicionar su marca y conseguir nuevos clientes desde las tiendas de aplicaciones
+                                </p>
+                                <a href="#contact" class="btn btn-primary">MÁS INFORMACIÓN</a>
+                            </div>
+                            <div class="media-right media-middle" style="width: 50%; float: left;">
+                                <img class="media-object img-responsive" src="img/serv-app-movil02.png" alt="2" >
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="section-padding-detail wow fadeInUp delay-05s">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h2 class="light pad-bt15"><span>Beneficios</span></h2>
-                        <p class="sub-title pad-bt15">
-                            Las empresas maximizan de manera natural la eficiencia de sus recursos y procesos para sacarles el máximo provecho. En concordancia con la creciente tendencia del uso de smartphones, desarrollar apps móviles para empresas y organizaciones se convierte en una estrategia que puede aportar numerosas ventajas.
-                        </p>
-                        <hr class="bottom-line">
-
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> Fortalecer la marca tener presencia en los dispositivos móviles posiciona mucho mejor la marca.
-                        </p>
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> Fidelización de clientes ofreciendo un servicio exclusivo a través de su app hará que su cliente se identifique aún más con su marca.
-                        </p>
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> Retención de clientes aprovechar la app para mejorar la experiencia del cliente con su marca hará de la retención un proceso más fácil.
-                        </p>
-
-                        <p class="text-justify">
-                            <span class="glyphicon glyphicon-ok"></span> Conseguir nuevos clientes una app móvil le ayudara a posicionar su marca y conseguir nuevos clientes desde las tiendas de aplicaciones
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <script type="text/javascript"> seccionclientes();</script>
         <script type="text/javascript"> seccionnosotros();</script>
-        <script type="text/javascript"> seccionblog();</script>
+        <script type="text/javascript"> seccionclientes();</script>
         <script type="text/javascript"> seccioncontacto();</script>
         <script type="text/javascript"> piepagina();</script>
 
